--- a/css/style.css
+++ b/css/style.css
@@ -5,63 +5,81 @@
 /* styling body */ 
 
 body {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-
+    margin: 30px;
+    position: relative;
+    background-color: black;
+   
+}
+.my-col {
+    display: flex;
+    justify-content: center;
 }
 
+.header-style {
+    color: #06C502;
+    display: flex;
+    margin: 20px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    font-size: 48px;
+}
 /*Making a cricle of 4 pieces (sectors) in different colours and one circle in the middle*/
 .sector {
-  width: 200px;
-  height: 200px;  
-  display: inline-block;
+  width: 240px;
+  height: 240px;  
+  margin: 10px;
   cursor: pointer;
+  border-radius: 50px;
+  
  }
   
-.top-left-sector {
-    border-top-left-radius: 50%;
-    background-color: red;
-    border-bottom-right-radius: 100px;
+.top-left-sector {    
+    /*background-color: red;*/
+    border: 10px solid red;    
 }
 
-.top-right-sector {
-    border-top-right-radius: 50%;
-    background-color: blue;
-    border-bottom-left-radius: 100px;
+.top-right-sector {    
+   /* background-color: blue;*/
+    border: 10px solid blue;
+   }
+
+.bottom-left-sector {   
+    /*background-color: green;*/
+    border: 10px solid green;        
 }
 
-.bottom-left-sector {
-    border-bottom-left-radius: 50%;
-        background-color: green;
-        border-top-right-radius: 100px;
+.bottom-right-sector {   
+    /* background-color: gold;*/
+    border: 10px solid gold;    
 }
-.bottom-right-sector {
-    border-bottom-right-radius: 50%;
-    background-color: gold;
-    border-top-left-radius: 100px;
-    
+
+.top-left-sector:hover {
+    background-color: rgba(255, 4, 4, 0.527);
 }
-.inner-circle {
-    position: relative;
-    background: black;
-	border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    bottom: 300px;
-    left: 100px;  
+
+.top-right-sector:hover {    
+    /* background-color: blue;*/
+     background-color:  rgba(0, 0, 255, 0.596);
     }
+ 
+ .bottom-left-sector:hover {   
+     /*background-color: green;*/
+     background-color:  rgba(0, 128, 0, 0.582);        
+ }
+ 
+ .bottom-right-sector:hover {   
+     /* background-color: gold;*/
+     background-color:  rgba(255, 217, 0, 0.678);    
+ }
+
 
     /* Game action styling */
 
-    .sector:hover {
-        box-shadow: inset 0px 0px 0px 4px rgb(133, 49, 56);
-        box-sizing: border-box;; 
-    }
+   
 
     .active {
-        background-color: white;
+        background-color: rgba(255, 255, 255, 0.705);
+        
     }
+    
