--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,21 @@ body {
    
     justify-content: center;
     padding: 0;
+    
     }
+
     .col-3 {
       margin: 20px;
     }
 .col-my-left {
     color: blanchedalmond;
 }
-
+.col-quadrants-left {
+    text-align: -webkit-right;
+}
+.col {
+    width: 50%;
+}
 
 .header-style {
     color: #06C502;
@@ -34,6 +41,7 @@ body {
     font-size: 72px;
     font-family: "Orbitron", sans-serif;
     font-weight: 400;
+    text-align: center;
 }
 /*Making a quadrant of 4 pieces (sectors) in different colours*/ 
 .sector {
@@ -48,9 +56,7 @@ body {
  .row-3 {
      margin:50px auto;
  }
- .col {
-     text-align: center;
- }
+ 
 
  .my-col-bottom-left {
      justify-content: space-around;
@@ -103,13 +109,17 @@ body {
     .active {
         background-color: rgba(255, 255, 255, 0.705);        
     }
+    h4 {
+        padding: 10px;
+    }
 
     
       
         .row {
           display: flex;
-          justify-content: space-between;
+          justify-content:space-evenly;
         }
+       
 
         .my-col-bottom-left{
             text-align: end;
@@ -128,4 +138,59 @@ body {
                     li {
                         list-style: none;
                     }
-        
+
+    @media (max-width: 1199.98px) { 
+                    #column-order-1 {
+                        order: -1;
+                        flex-direction: row;
+                    }
+                    #column-order-2 {
+                        order: 1;
+                    }
+                    .row-2 {
+                        width: 100%;
+                        
+                    }
+                    .col-quadrants-left{
+                        margin: 0 auto;
+                        padding: 0;
+                    
+                    }
+                    .mobile-template {
+                        
+                        display: inline-flex;
+                        text-align: center;
+                        justify-content: space-evenly;
+                }
+                .col-3 {
+                    -ms-flex: 0 0 100%;
+                    flex: 0 0 100%;
+                    max-width: 100%; 
+                    text-align: center; 
+                }
+              
+                }
+
+    @media (max-width: 575.98px) { 
+        .sector {
+            width: 160px;
+            height: 160px;  
+        }        
+           }
+          
+
+    @media (max-width: 400px) { 
+        .sector {
+            width: 120px;
+            height: 120px;  
+                      
+           }
+    }
+
+    @media (max-width: 300px) { 
+        .sector {
+            width: 100px;
+            height: 100px;  
+                      
+           }
+    }
