used unique arrays to create top three high scores in the leader board and current's player highest score

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ body {
     
     }
 
+    #topThree {
+        color: #06C502;
+    }
+
     .col-3 {
       margin: 20px;
       text-align: -webkit-center;
