--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
    font-family: "Orbitron", sans-serif;
    height: 100%;
    overflow-y: scroll !important;
+   
 }
 
 .my-col {
@@ -233,6 +234,10 @@ body {
        .form-group .form-control::placeholder {
            color: #06C502;
        }
+
+       p {
+        color: #06C502;   
+       }
        
        
        #modal-button {
@@ -279,6 +284,7 @@ body {
                         display: inline-flex;
                         text-align: center;
                         justify-content: space-evenly;
+                        max-width: 600px;
                 }
                 .col-3 {
                     -ms-flex: 0 0 100%;
@@ -286,8 +292,10 @@ body {
                     max-width: 100%; 
                     text-align: center; 
                 }
-              
-                }
+                .mobile-template-bottom {
+                    max-width: 500px;
+                } 
+            }
 
     @media (max-width: 575.98px) { 
         .sector {
@@ -308,7 +316,7 @@ body {
         }    
         .header-style {
             margin: 0 0 20px 0;
-        } 
+        }       
            }
           
 
@@ -316,7 +324,27 @@ body {
         .sector {
             width: 120px;
             height: 120px;                        
-           }          
+           }   
+           #column-order-2 {
+                    
+            flex-direction: row;
+           
+        } 
+        .btn {
+            width: 140px;
+            height: 69px;
+            margin: 10px 0 0 10px;
+            color: #FFFFFF;
+            font-family: "Orbitron", sans-serif;
+            font-size: 14px;
+            padding: 0;
+        }   
+        .h4, h4 {
+            font-size: 1.1rem;
+        }    
+        .header-style {
+            margin: 0 0 20px 0;
+        }       
     }
 
     @media (max-width: 300px) { 
