--- a/css/style.css
+++ b/css/style.css
@@ -69,62 +69,76 @@ button {
   margin: 10px;
   cursor: pointer;
   border-radius: 50px;  
+  background-color: currentColor;
  } 
+
+
+
   
 .top-left-sector {    
-    /*background-color: red;*/ 
+    background-color: rgba(255, 4, 4, 0.6);
     border: 10px solid red;    
 }
 
 .top-right-sector {    
-   /* background-color: blue;*/
+    background-color: rgba(0, 0, 255, 0.6);
     border: 10px solid blue;
    }
 
 .bottom-left-sector {   
-    /*background-color: green;*/
-    border: 10px solid green;        
+    background-color: rgba(0, 128, 0, 0.5);
+    border: 10px solid green;  
+    color: currentColor;      
 }
 
 .bottom-right-sector {   
-    /* background-color: gold;*/
+     background-color: rgba(255, 217, 0, 0.5);
     border: 10px solid gold;    
 }
- /* Colours when hoovering over the element */
+ /* Colours when touching/clicking the element */
 .top-left-sector:active {
-    background-color: rgba(255, 4, 4, 0.6);
+    background-color: rgba(255, 4, 4, 0.8);
 }
 
 .top-right-sector:active {    
     /* background-color: blue;*/
-     background-color:  rgba(0, 0, 255, 0.6);
+     background-color:  rgba(0, 0, 255, 0.8);
     }
  
  .bottom-left-sector:active {   
      /*background-color: green;*/
-     background-color:  rgba(0, 128, 0, 0.6);        
+     background-color:  rgba(0, 128, 0, 0.8);        
  }
  
  .bottom-right-sector:active {   
      /* background-color: gold;*/
-     background-color:  rgba(255, 217, 0, 0.6);    
+     background-color:  rgba(255, 217, 0, 0.8);    
  }
 
- /* "Active" or blinking sequnece color */
+ /* "Active" or blinking sequnece color. */
 
- .active {
-    background-color: rgba(255, 255, 255, 0.705);        
+ #one.active {
+     background-color: rgba(255, 4, 4);
+ }
+
+ #two.active {
+    background-color: rgba(0, 0, 255);
 }
 
+#three.active {
+    background-color: rgba(0, 128, 0);
+}
+
+#four.active {
+    background-color: rgba(255, 217, 0);
+}
+ 
 
 
 /**
  * Remove focus styles for non-keyboard focus.
  */
- :focus:not(:focus-visible) {
-    outline: 0;
-    box-shadow: none;
-  }
+
   
 
 
