separated modals for better user expierence

--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,8 @@ button {
                list-style: none;
            }
 
-       .close-btn {
+       .close-btn,
+       .close-btn-rules {
            background-color: transparent;
            font-size: 30px;           
            color: #06C502; 
