--- a/css/style.css
+++ b/css/style.css
@@ -265,9 +265,7 @@ button {
 
        #modal-leaderboard ul{
         width: max-content;
-       }
-
-      
+       }         
        
        .form-control {
            background-color: black;
@@ -305,8 +303,61 @@ button {
            border: none;
            margin-right: 15px;
            margin-top: 15px;
-       }    
-     
+       }   
+       /* testing animated alert */
+
+       .swal-title {
+        color: #06C502;
+        font-family: "Orbitron", sans-serif;
+        background-color: black;
+        font-weight: 400;
+        text-transform: none;
+        position: relative;
+        display: block;
+        padding: 13px 16px;
+        font-size: 27px;
+        line-height: normal;
+        text-align: center;
+        margin-bottom: 0;
+    }
+
+    .swal-button-container {
+            display: none;        
+    }
+
+    .swal-overlay--show-modal .swal-modal {
+        opacity: 1;
+        pointer-events: auto;
+        box-sizing: border-box;
+        -webkit-animation: showSweetAlert .3s;
+        animation: showSweetAlert .3s;
+        will-change: transform;
+    }
+    
+    .swal-modal {
+        width: 478px;
+        opacity: 0;
+        pointer-events: none;
+        background-color: black;
+        text-align: center;
+        border-radius: 5px;
+        position: static;
+        margin: 20px auto;
+        display: inline-block;
+        vertical-align: middle;
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        z-index: 10001;
+        transition: opacity .2s,-webkit-transform .3s;
+        transition: transform .3s,opacity .2s;
+        transition: transform .3s,opacity .2s,-webkit-transform .3s;
+    }
+ 
+
+
+
      /* Media styles*/
 
     
