--- a/css/style.css
+++ b/css/style.css
@@ -157,15 +157,6 @@ button {
 #four.active {
     background-color: rgba(255, 217, 0);
 }
- 
-
-
-/**
- * Remove focus styles for non-keyboard focus.
- */
-
-  
-
 
     /* Game template styling */
 
@@ -441,7 +432,10 @@ button {
         }    
         .header-style {
             margin: 0 0 20px 0;
-        }       
+        }
+        .hide-on-mobile {
+            display: none;
+        }     
            }
           
 
