--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
    
 }
 
-.my-col {
+    .my-col {
    
     justify-content: center;
     padding: 0;
@@ -29,21 +29,23 @@ body {
     .col-3 {
       margin: 20px;
       text-align: -webkit-center;
+      text-align: -moz-center;
     }
 
-.col-my-left {
+    .col-my-left {
     color: blanchedalmond;
-}
+    }
 
-.col-quadrants-left {
+    .col-quadrants-left {
     text-align: -webkit-right;
-}
+    text-align: -moz-right;
+    }
 
-.col {
+    .col {
     width: 50%;
-}
+    }
 
-.header-style {
+    .header-style {
     color: #06C502;
     display: flex;
     margin: 100px 0 20px 0;
@@ -54,25 +56,25 @@ body {
     font-family: "Orbitron", sans-serif;
     font-weight: 400;
     text-align: center;
-}
+    }
 
-button {
+    button {
      /* Remove focus around button */
     outline:none;  
-}
+    }
 
 /*Making a quadrant of 4 pieces (sectors) in different colours*/ 
 
-.sector {
+    .sector {
   width: 240px;
   height: 240px;  
   margin: 10px;
   cursor: pointer;
   border-radius: 50px;  
   background-color: currentColor;
- } 
+    } 
 
-.unmuted::before {
+    .unmuted::before {
     font-family: "Font Awesome 5 Free"; 
 	font-weight: 900;
 	content: "\f028";
@@ -80,8 +82,8 @@ button {
     background-color: black;    
     }
 
-.unmuted,
-.muted {
+    .unmuted,
+    .muted {
         background-color: black;
         outline-style: none;
         border-style: none;
@@ -90,7 +92,7 @@ button {
     
 
 
- .muted::before {
+    .muted::before {
     font-family: "Font Awesome 5 Free"; 
 	font-weight: 900;
 	content: "\f6a9";
@@ -98,63 +100,64 @@ button {
     background-color: black;    
     }
 
-  .top-left-sector {    
+     .top-left-sector {    
     background-color: rgba(255, 4, 4, 0.6);
     border: 10px solid red;    
-}
+    }
 
-.top-right-sector {    
+    .top-right-sector {    
     background-color: rgba(0, 0, 255, 0.6);
     border: 10px solid blue;
    }
 
-.bottom-left-sector {   
-    background-color: rgba(0, 128, 0, 0.5);
+    .bottom-left-sector {   
+    background-color: rgba(0, 128, 0, 0.6);
     border: 10px solid green;  
     color: currentColor;      
-}
+    }
 
-.bottom-right-sector {   
-     background-color: rgba(255, 217, 0, 0.5);
+    .bottom-right-sector {   
+     background-color: rgba(255, 217, 0, 0.6);
     border: 10px solid gold;    
-}
- /* Colours when touching/clicking the element */
-.top-left-sector:active {
-    background-color: rgba(255, 4, 4, 0.8);
-}
+    }
 
-.top-right-sector:active {    
+    /* Colours when touching/clicking the element */
+    .top-left-sector:active {
+    background-color: rgba(255, 4, 4, 0.9);
+    }
+
+    .top-right-sector:active {    
     /* background-color: blue;*/
-     background-color:  rgba(0, 0, 255, 0.8);
+     background-color:  rgba(0, 0, 255, 0.9);
     }
  
- .bottom-left-sector:active {   
+    .bottom-left-sector:active {   
      /*background-color: green;*/
-     background-color:  rgba(0, 128, 0, 0.8);        
- }
+     background-color:  rgba(0, 128, 0, 0.9);        
+    }
  
- .bottom-right-sector:active {   
+    .bottom-right-sector:active {   
      /* background-color: gold;*/
-     background-color:  rgba(255, 217, 0, 0.8);    
- }
+     background-color:  rgba(255, 217, 0, 0.9);    
+    }
 
  /* "Active" or blinking sequnece color. */
 
- #one.active {
+    #one.active {
      background-color: rgba(255, 4, 4);
- }
+    }
 
- #two.active {
+    #two.active {
     background-color: rgba(0, 0, 255);
-}
+    }
 
-#three.active {
+    #three.active {
     background-color: rgba(0, 128, 0);
-}
+    }
 
-#four.active {
+    #four.active {
     background-color: rgba(255, 217, 0);
-}
+    }
 
     /* Game template styling */
 
@@ -438,6 +441,7 @@ button {
     @media (min-width: 1199.99px) { 
         .col {
             width: 70%;
+            
         }
         .row {
             flex-wrap: nowrap;
